--- a/quipp.cabal
+++ b/quipp.cabal
@@ -23,7 +23,8 @@ library
     base >=4.7 && < 4.8,
     containers >=0.5 && < 0.6,
     ad >= 4.2,
-    random >= 1.0.1,
+    -- random >= 1.0.1,
+    random-fu >= 0.2,
     mtl >= 1.1.0,
     -- bed-and-breakfast >= 0.5,
     hmatrix >= 0.16,
