--- a/quipp.cabal
+++ b/quipp.cabal
@@ -32,3 +32,10 @@ library
 
   -- hs-source-dirs:      
   default-language:    Haskell2010
+
+test-suite quipp-tests
+  type: exitcode-stdio-1.0
+  hs-source-dirs: tests, src
+  main-is: MainTestSuite.hs
+  build-depends:
+    base, HUnit, QuickCheck, tasty, tasty-hunit, tasty-quickcheck
