--- a/quipp.cabal
+++ b/quipp.cabal
@@ -30,12 +30,22 @@ library
     hmatrix >= 0.16,
     parsec >= 3.1
 
-  -- hs-source-dirs:      
+  hs-source-dirs: src
   default-language:    Haskell2010
 
 test-suite quipp-tests
   type: exitcode-stdio-1.0
+  default-language:    Haskell2010
   hs-source-dirs: tests, src
   main-is: MainTestSuite.hs
   build-depends:
-    base, HUnit, QuickCheck, tasty, tasty-hunit, tasty-quickcheck
+    HUnit, QuickCheck, tasty, tasty-hunit, tasty-quickcheck,
+    base >=4.7 && < 4.8,
+    containers >=0.5 && < 0.6,
+    ad >= 4.2,
+    -- random >= 1.0.1,
+    random-fu >= 0.2,
+    mtl >= 1.1.0,
+    -- bed-and-breakfast >= 0.5,
+    hmatrix >= 0.16,
+    parsec >= 3.1
