--- a/quipp.cabal
+++ b/quipp.cabal
@@ -23,12 +23,13 @@ library
     base >=4.7 && < 4.8,
     containers >=0.5 && < 0.6,
     ad >= 4.2,
-    -- random >= 1.0.1,
+    random >= 1.0.1,
     random-fu >= 0.2,
     mtl >= 1.1.0,
     -- bed-and-breakfast >= 0.5,
     hmatrix >= 0.16,
-    parsec >= 3.1
+    parsec >= 3.1,
+    MissingH >= 1.2
 
   hs-source-dirs: src
   default-language:    Haskell2010
@@ -43,9 +44,10 @@ test-suite quipp-tests
     base >=4.7 && < 4.8,
     containers >=0.5 && < 0.6,
     ad >= 4.2,
-    -- random >= 1.0.1,
+    random >= 1.0.1,
     random-fu >= 0.2,
     mtl >= 1.1.0,
     -- bed-and-breakfast >= 0.5,
     hmatrix >= 0.16,
-    parsec >= 3.1
+    parsec >= 3.1,
+    MissingH >= 1.2
