--- a/quipp.cabal
+++ b/quipp.cabal
@@ -26,12 +26,14 @@ executable quipp_main
     ad >= 4.2,
     random >= 1.0.1,
     random-fu >= 0.2,
+    transformers,
     mtl >= 1.1.0,
     -- bed-and-breakfast >= 0.5,
     hmatrix >= 0.16,
     parsec >= 3.1,
     MissingH >= 1.2,
-    time >= 1.4
+    time >= 1.4,
+    HaPy == 0.1.*
 
   hs-source-dirs: src
   default-language:    Haskell2010
